third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul/enum_non_forward.rs
#[derive(derive_more::Mul)]
enum Foo {
    Bar(i32),
}

fn main() {}
